[package]
name = "rust-kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.10.12"
x86_64 = "0.14.10"
uart_16550 = "0.2.18"
spin = "0.9.4"
linked_list_allocator = "0.10.1"
acpi = "4.1.1"
aml = "0.16.1"
log = "0.4.17"
pci_types = "0.2.0"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[package.metadata.bootloader]
map-page-table-recursively = true
kernel-stack-size = 1048576